/* Copyright 2017 The TensorFlow Authors. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto3";

package tensorflow;
option java_outer_classname = "VerbsServiceProtos";
option java_multiple_files = true;
option java_package = "org.tensorflow.contrib.verbs";

////////////////////////////////////////////////////////////////////////////////
//
// GRPC Helper messages used to exchange RDMA information.
//
////////////////////////////////////////////////////////////////////////////////

message Channel {
  int32 lid = 1;
  int32 qpn = 2;
  int32 psn = 3;
  uint64 snp = 4;
  uint64 iid = 5;
}

message MemoryRegion {
  uint64 remote_addr = 1;
  uint32 rkey = 2;
}
message GetRemoteAddressRequest {
  string host_name = 1;
  Channel channel = 2;
  repeated MemoryRegion mr = 3;
}

message GetRemoteAddressResponse {
  string host_name = 1;
  Channel channel = 2;
  repeated MemoryRegion mr = 3;
}

message ErrorStatusProto {
  int32 error_code = 1;
  string error_message = 2;
  string error_details = 3;
}

////////////////////////////////////////////////////////////////////////////////
//
// VerbsService
//
////////////////////////////////////////////////////////////////////////////////

service VerbsService {
  rpc GetRemoteAddress(GetRemoteAddressRequest)
      returns (GetRemoteAddressResponse);
}
